--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Internship Test</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Студент">Студент</string>
+    <string name="AddUser">Добавить Пользователя</string>
+    <string name="enterName">Введите имя</string>
+    <string name="enterAge">Ведите возраст</string>
+    <string name="setDate">Введите дату рождения</string>
+    <string name="save" />
+    <string name="Save">Сохранить</string>
+    <string name="back">Назад</string>
+    <string name="selectDate">Выбрать дату</string>
+
 </resources>
